# script_generator

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  BATCH_PROCESSING.md  CLAUDE.md  CONTRIBUTING.md  DOCS.md  IMPLEMENTATION_SUMMARY.md  LATER_FIXES.md  README.md  REORGANIZATION_STEPS.md  REPLACE_ADD_STEP_SECTION.md  SYSTEM_SUMMARY.md  UPDATED_STRUCTURE.md  UPDATE_UI_DROPDOWNS.md  Visual Scaffolds for Remediation - Sheet1.csv  example_batch_pipeline.py  generate.py  interactive_pipeline.py  lesson.json  list.py  pipeline_runner.py  pipeline_runner_old.py  pipelines.py  process_individual.py  pyproject.toml  retry_individual.py  retry_remediation.py  run_dashboard.bat  run_dashboard.sh  run_module_editor.bat  run_module_editor.sh  split_godot.py  test_batch.py  test_caching.py  test_complete_flow.py  test_modular_prompts.py  test_problem_template_injection.py  test_question_gen_single.py  (+4 more)
.claude/: settings.local.json
archive/: warmup_generator.py
cli/: __init__.py  approve_output.py  compare.py  create_prompt.py  diff_dialogue.py  list.py  pull_tracked_scripts.py  push_to_notion.py  rerun.py  rerun_multiselect.py  run_module.py  run_pipeline.py
config/: BATCH_PROCESSING.md  animation_events.json  misconceptions.json  misconceptions_fractions.json  notion_pages.json  pipelines.json  pipelines.py  problem_template_schema_guide.md  problem_template_schema_guide_v2.md  template.json
core/: batch_processor.py  claude_client.py  file_utils.py  input_parsers.py  json_utils.py  output_validator.py  path_manager.py  pipeline.py  pipeline_executor.py  (+5 more)
(+7097 files in other folders)
