[project]
name = "script-generator"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "anthropic",
    "python-dotenv",
    "streamlit",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E/W = pycodestyle, F = pyflakes, I = import sorting
select = ["E", "W", "F", "I"]
ignore = [
    "E501",  # line too long — handled by formatter, not linter
]

[tool.ruff.lint.per-file-ignores]
# Test files can use assert and don't need imports sorted strictly
"tests/**" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
